--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Aswin Kumar Nalluri
-logo: /assets/img/headshot_circle.png
+logo: aswin.jpeg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
